# C-MC_electron

./: .gitignore  Makefile  Makefile.in  README  config.h  config.status  configure  configure.in
autom4te.cache/: output.1  traces.0  traces.1
finfet/: Electron6999_realspace.vtr  heat6999.vtr  heat_profile_y.csv  input.txt  ldg.txt  ldg_regions.vtu  ldg_spec.md  lgrid.txt  log.txt  main  mkinput.sh  pot6999.vtr
finfet/.svn/: entries
finfet/.svn/text-base/: input.txt.svn-base  ldg.txt.svn-base  lgrid.txt.svn-base  main.svn-base
finfet/input/: input.txt
finfet/input/finfet-uniform/: dg.txt
finfet/input/finfet-uniform/.svn/: entries
finfet/input/finfet-uniform/plot3d/: current1.m  plot_2D_x.m
finfet/plot3d/: 3d_to_2d_x.c  3dslices.c  integral_data.c  plot_3D_dens.m  plot_3D_velo.m  plot_cdata_y.m  pot_1D_y.m  velocity3D.m
finfet/plot3d-gnuplot/: gen_data
finfet/plot3d-gnuplot/.svn/: entries
finfet/plot3d-gnuplot/.svn/text-base/: gen_data.c.svn-base  makefile.svn-base  utils.c.svn-base
finfet/plot3d-gnuplot/data/.svn/: entries
finfet/plot3d-gnuplot/fig/.svn/: entries
finfet/plot3d/.svn/text-base/: 3d_to_2d_y.c.svn-base  finfet.m.svn-base  pot_2D.m.svn-base  pot_3D.m.svn-base  qpot_1D_y.m.svn-base  qpot_2D_x.m.svn-base
finfet/plot3d/plot3d/: current.m  int_input.txt  plot_2D_z.m  plot_3D_energy.m  pot_1D.m  pot_2D_z.m  qpot_2D_y.m  read_grid.m
finfet/scripts/: ldg2vtu.py  plot_1D_heat_profile.py  plot_2D_heat.py  plot_2D_pot.py  plot_2D_realspace.py  plot_3D_heat.py  plot_3D_pot.py  plot_3D_realspace.py  plot_current.py  plot_kspace.py  run_postprocess.sh
finfet/scripts/.svn/: entries
finfet/submits/: submit-dsec
finfet_old/: PI30053  lgrid.txt  main
finfet_old/data/.svn/: entries
finfet_old/input/.svn/: entries
finfet_old/input/finfet-uniform/: grid.txt
finfet_old/input/finfet-uniform/plot3d/: plot_1D_y.m  sp_plot.m
finfet_old/plot3d/: plot_1D_z.m  pot_2D_x.m  pot_2D_y.m  slices_input.txt
finfet_old/plot3d-gnuplot/: config.txt
finfet_old/plot3d-gnuplot/.svn/text-base/: config.txt.svn-base  plot.sh.svn-base  template.gnuplot.svn-base  (+1 more)
finfet_old/plot3d/.svn/: entries
finfet_old/scripts/: current.py  invV.py  inverseQ.py
finfet_old/submits/: submit
finfet_old/submits/.svn/: entries
include/: Band.h  Band.h.bak  Constant_GlobalVariable_MathFunction.h  PoissonSolver.h  defs.h  mcmodel.h  myStatistic.h  utils.h
input/: analytic_density_cross_number.txt  analytic_dos.txt  bs.si.asc  debug_analytic_bins.txt  density_cross_number.txt  klaab.txt  klaem.txt  kloab.txt  kloem.txt  ktoab.txt  ktoem.txt  phonon_dispersion.txt  scattering_rates_check.txt  scattering_rates_fullband.txt  zd.si.asc
lib/: Makefile  Makefile.am  Makefile.in  main  utils.o:Zone.Identifier
lib/.deps/: Band.Po  CellHit.Po  Constant_GlobalVariable_MathFunction.Po  ElectronImpurityScatter.Po  ElectronPhononScatter.Po  GetSurfRoughnessPhononScRate.Po  HolePhononScatter.Po  MultipleRefresh.Po  ParSurfaceScatter.Po  ParticleUtils.Po  PoissonSolver.Po  TetHit.Po  erf.Po  heat.Po  main.Po  mcmodel.Po  myStatistic.Po  set_user_defined_data.Po  utils.Po
phonon_BTE_MC/: MC_solve_BTE.m  MC_time_loop_BTE.m  accumulate_cell_energy_.m  attach_isothermal_ghosts_.m  build_domain_box_.m  build_q_T_lookup_.m  check_convergence_.m  compute_boundary_mask_.m  detach_isothermal_ghosts_.m  draw_iter_snapshot.m  extend_temperature_with_ghosts_.m  init_mesh_from_geom_.m  init_state_.m  init_state_Energy.m  load_heat_from_finfet.m  main.m  mat_silicon_100.m  mc_default_opts.m  particle_fly_.m  particle_scattering_.m  precompute_relax_times_.m  read_lgrid_nodes.m  reindex_particles_to_mesh_.m  seed_ghost_particles_.m  setup_case_cube_100nm.m  setup_case_from_electron.m  spawn_heat_source.m  tally_iface_by_cid_.m  update_temperature_from_energy_.m
src/: Band.cpp  Band.cpp.bak  CellHit.cpp  Constant_GlobalVariable_MathFunction.cpp  ElectronImpurityScatter.cpp  ElectronPhononScatter.cpp  GetSurfRoughnessPhononScRate.cpp  HolePhononScatter.cpp  MultipleRefresh.cpp  OxideElectronPhononScatter.cpp  ParSurfaceScatter.cpp  ParticleUtils.cpp  PoissonSolver.cpp  TetHit.cpp  analyticband.cpp  erf.cpp  fermi_int.f  heat.cpp  main.cpp  mcmodel.cpp  mcmodel.cpp.bak  myStatistic.cpp  particle_init.cpp  set_user_defined_data.cpp  utils.cpp
(+16 files in other folders)
